creato componend header e inizio di stilizzazione

--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -2,7 +2,8 @@
 $body-bg: #f8fafc;
 
 // Typography
-$font-family-sans-serif: 'Nunito', sans-serif;
+$font-family-sans-serif: 'Nunito',
+sans-serif;
 $font-size-base: 0.9rem;
 $line-height-base: 1.6;
 
@@ -17,3 +18,20 @@ $yellow: #ffed4a;
 $green: #38c172;
 $teal: #4dc0b5;
 $cyan: #6cb2eb;
+
+@mixin textColorGradient($color1, $color2) {
+    //crea un gradient del colore della scritta avendo in pasto 2 colori
+    background: -webkit-radial-gradient(circle, $color1 0%, $color2 90%);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+}
+
+@mixin colorGradient($color1, $color2) {
+    //crea un gradient del colore dello sfondo
+    background: $color1;
+    background: radial-gradient(circle, $color1 -70%, $color2 100%);
+}
+
+@mixin background-rgba {
+    background-color: rgba(0, 0, 0, 0.2);
+}
